fix: refatorando .env exemplo

--- a/.env-exemplo
+++ b/.env-exemplo
@@ -1,6 +1,2 @@
-USER = 
-PASSWORD = 
-HOST = 
-PORT_POSTGRES =
-DATABASE = shortly
+DATABASE = "url do seu database com banco e credenciais shortly "
 PORT= 4000
